# PolyTools

./: CMakeLists.txt  LICENSE  README.md
ActionsRegistry/: CMakeLists.txt
ActionsRegistry/src/pt/: ActionsRegistry.cpp  ActionsRegistry.hpp
PolyTools/: CMakeLists.txt
PolyTools/src/pt/: ActionsRegistry.cpp  ActionsRegistry.hpp  IActionsRegistry.hpp  ISubEditorWindowHandle.hpp  IToolWindowHandle.hpp  Manager.hpp  Settings.hpp  SubEditor.cpp  SubEditor.hpp  Tool.cpp  Tool.hpp
Test/CodeTool/: CMakeLists.txt
Test/CodeTool/src/: CodeTool.cpp  CodeTool.hpp  Plugin.cpp
Test/CodeToolAPI/: CMakeLists.txt
Test/CodeToolAPI/src/: ICodeTool.hpp
Test/PictureViewToolAPI/: CMakeLists.txt
Test/PictureViewToolAPI/src/: OpenPictureViewToolIntent.hpp  PictureViewTool.hpp
Test/TestApp/src/: Main.cpp
Test/TextEditToolAPI/: CMakeLists.txt
Test/TextEditToolAPI/src/: OpenTextEditToolIntent.hpp  TextEditTool.hpp
Test/TextTool/src/: Plugin.cpp
