# Include dir
set(CODE_TOOL_API_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE CODE_TOOL_API_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${CODE_TOOL_API_INCLUDE}/*.cpp 
    ${CODE_TOOL_API_INCLUDE}/*.hpp 
    ${CODE_TOOL_API_INCLUDE}/*.h)
GenerateSourceGoups("${CODE_TOOL_API_SRCS}")

add_library(${CODE_TOOL_API_TARGET} INTERFACE)
add_custom_target(${CODE_TOOL_API_TARGET}_ SOURCES ${CODE_TOOL_API_SRCS})
target_include_directories(${CODE_TOOL_API_TARGET} INTERFACE ${CODE_TOOL_API_INCLUDE})

target_link_libraries(${CODE_TOOL_API_TARGET} INTERFACE ${POLYTOOLS_TARGET})