# Include dir
set(PICTURE_VIEW_TOOL_API_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE PICTURE_VIEW_TOOL_API_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${PICTURE_VIEW_TOOL_API_INCLUDE}/*.cpp 
    ${PICTURE_VIEW_TOOL_API_INCLUDE}/*.hpp 
    ${PICTURE_VIEW_TOOL_API_INCLUDE}/*.h)
GenerateSourceGoups("${PICTURE_VIEW_TOOL_API_SRCS}")

add_library(${PICTURE_VIEW_TOOL_API_TARGET} INTERFACE)
add_custom_target(${PICTURE_VIEW_TOOL_API_TARGET}_ SOURCES ${PICTURE_VIEW_TOOL_API_SRCS})
target_include_directories(${PICTURE_VIEW_TOOL_API_TARGET} INTERFACE ${PICTURE_VIEW_TOOL_API_INCLUDE})

target_link_libraries(${PICTURE_VIEW_TOOL_API_TARGET} INTERFACE ${POLYPLUGIN_TARGET})