# Include dir
set(TEXT_EDIT_TOOL_API_INCLUDE ${CMAKE_CURRENT_LIST_DIR}/src)

# Source files list
file(GLOB_RECURSE TEXT_EDIT_TOOL_API_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}
    ${TEXT_EDIT_TOOL_API_INCLUDE}/*.cpp 
    ${TEXT_EDIT_TOOL_API_INCLUDE}/*.hpp 
    ${TEXT_EDIT_TOOL_API_INCLUDE}/*.h)
GenerateSourceGoups("${TEXT_EDIT_TOOL_API_SRCS}")

add_library(${TEXT_EDIT_TOOL_API_TARGET} INTERFACE)
add_custom_target(${TEXT_EDIT_TOOL_API_TARGET}_ SOURCES ${TEXT_EDIT_TOOL_API_SRCS})
target_include_directories(${TEXT_EDIT_TOOL_API_TARGET} INTERFACE ${TEXT_EDIT_TOOL_API_INCLUDE})

target_link_libraries(${TEXT_EDIT_TOOL_API_TARGET} INTERFACE ${POLYPLUGIN_TARGET})